--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@
     <p><a href="http://echorand.me/">&larr; Click here to go back home</a></p>
   </div>
 </div>
-<script src="http://echorand.me/js/highlight.pack.js"></script>
+<script src="http://echorand.me/linux_voice_4/js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
