--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </div>
 
 
-<script src="http://echorand.me/js/highlight.pack.js"></script>
+<script src="http://echorand.me/linux_voice_4/js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
